code smell getAllAuthors